EXTRA_DIST = \
	abort-redirect.cpp \
        ClientTest.h \
        ClientTest.cpp \
	COPYING \
        client-test-main.cpp \
	test.h \
	test.cpp \
        Algorithm/Artistic \
        Algorithm/COPYING \
        Algorithm/Diff.pm \
        Algorithm/README \
        testcases/ical20.ics \
	testcases/ical20.ics.local \
        testcases/itodo20.ics \
        testcases/vcal10.ics \
        testcases/vcard21.vcf \
        testcases/vcard30.vcf \
        testcases/imemo20.ics \
	testcases/lcs/file1.txt \
	testcases/lcs/file2.txt \
	testcases/templates/clients/phone/nokia/S40/7210c.ini \
	testcases/templates/clients/SyncEvolution.ini \
        syncevo-http-server.py \
        syncevo-http-server-logging.conf \
        syncevo-phone-config.py \
	$(wildcard testcases/*.patch) \
        synccompare.pl
