EXTRA_DIST = \
	abort-redirect.cpp \
        ClientTest.h \
        ClientTest.cpp \
	COPYING \
        client-test-main.cpp \
	test.h \
	test.cpp \
        Algorithm/Artistic \
        Algorithm/COPYING \
        Algorithm/Diff.pm \
        Algorithm/README \
        testcases/eds_event.ics \
	testcases/eds_event.ics.local \
        testcases/eds_task.ics \
        testcases/vcal10.ics \
        testcases/eds_contact.vcf \
        testcases/eds_contact.vcf \
        testcases/eds_memo.ics \
	testcases/google_event.ics \
	testcases/yahoo_contact.vcf \
	testcases/lcs/file1.txt \
	testcases/lcs/file2.txt \
	testcases/templates/clients/phone/nokia/S40/7210c.ini \
	testcases/templates/clients/SyncEvolution.ini \
        syncevo-http-server.py \
        syncevo-http-server-logging.conf \
        syncevo-phone-config.py \
	$(wildcard testcases/*.patch) \
        synccompare.pl
